--- a/tracker-app/.gitignore
+++ b/tracker-app/.gitignore
@@ -1,35 +1,23 @@
-# 의존성 파일 (npm install을 통해 다시 설치 가능)
-# 가장 중요한 폴더로, 용량이 매우 큽니다.
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# 빌드 결과물 (npm run build를 통해 생성)
-build/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# 환경 변수 파일 (API 키 등 민감한 정보 포함 가능)
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# 테스트 관련 파일
-coverage/
-
-# 로그 파일
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# 에디터 및 시스템 파일
-.idea/
-.vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Mac 시스템 파일
-.DS_Store
-
-# Windows 시스템 파일
-Thumbs.db
